updated mobile version-alignment issue

--- a/challenge.css
+++ b/challenge.css
@@ -41,7 +41,7 @@ h1{
     
  }
  footer {
-    padding:0px 10px 2px 0px ;
+    padding:10px 10px 0px 0px ;
  }
  
 
@@ -75,10 +75,9 @@ h1{
  
      
  .container {
-     width: 40%;
+     padding: 30px 30px 0 0;
      background-color: hsl(244, 38%, 16%);
-     
-     display: flex;
+    display: flex;
      flex-direction: column;
      border-radius: 1rem 0 0 1rem;}
      
@@ -116,11 +115,11 @@ h1{
             flex-direction: column-reverse;
         }
 .container {
-width: 85%;
+width: 80%;
 height: 100%;
 background-color: hsl(244, 38%, 16%);
 position: relative;
-right: 28.2%;
+left: -168px;
 border-radius: 0rem 0rem 1rem 1rem;
 }
        .card{
@@ -159,11 +158,12 @@ left: 40px;
        .twe{
            position: relative;
            top: 150px;
-           left: -79.7px;}
+           left: -79.5px;}
         
 
 
    
+
             
             
     
